--- a/templates/specUser.html
+++ b/templates/specUser.html
@@ -146,17 +146,17 @@
                   <div class="product-cont" style="background-color: #0C144D; border-radius: 8px;">
 
                   <div class="products">
-                      <i class="fa fa-box fa-lg" style="color: #CDE2FF;"></i> <a href="#" style="text-decoration: none; color: #CDE2FF;  font-size: 14px">Products</a>
+                      <i class="fa fa-box fa-sm" style="color: #CDE2FF; padding-left: 10px; padding-right: 25px;"></i> <a href="#" style="text-decoration: none; color: #CDE2FF; ">Products</a>
                   </div>
                 </div>
                 
                
                   <div class="transactions">
-                      <i class="fa fa-exchange fa-lg" style=" margin-right: 5px; font-size: 26px;"></i> <a href="{{ url_for('specificUserTransaction')}}" style="text-decoration: none; color: black; font-size: 14px">Transactions</a>
+                      <i class="fa fa-exchange fa-lg" style="padding-left: 7px; padding-right: 25px; "></i> <a href="{{ url_for('specificUserTransaction')}}" style="text-decoration: none; color: black; font-size: 14px">Transactions</a>
                   </div>
 
-                  <div class="audit-trail">
-                    <i class="fa fa-history fa-lg" style=" margin-right: 5px; font-size: 26px;"></i> <a href="{{ url_for('specificUserAuditTrail')}}" style="text-decoration: none; color: black; font-size: 14px">Audit trail</a>
+                  <div class="user-audit-trail">
+                    <i class="fa fa-history fa-lg" style=" padding-left: 9px; padding-right: 25px; "></i> <a href="{{ url_for('specificUserAuditTrail')}}" style="text-decoration: none; color: black; font-size: 14px">Audit trail</a>
                 </div>
                   
 
