--- a/templates/specUserTransaction.html
+++ b/templates/specUserTransaction.html
@@ -146,17 +146,17 @@
                        
                 
                     <div class="products">
-                      <i class="fa fa-box" style="font-size: 26px;"></i> <a href="{{ url_for('user')}}" style="text-decoration: none;   font-size: 14px">Products</a>
+                      <i class="fa fa-box" style="padding-left: 10px; padding-right: 25px;"></i> <a href="{{ url_for('user')}}" style="text-decoration: none;   font-size: 14px">Products</a>
                   </div>
                   <div class="transactions-cont" style="background-color: #0C144D; border-radius: 8px;">
                   <div class="transactions">
-                    <i class="fa fa-exchange" style="font-size: 26px; margin-right: 5px; color: #CDE2FF;"></i> <a href="{{ url_for('specificUserTransaction')}}" style="text-decoration: none;color: #CDE2FF; font-size: 14px">Transactions</a>
+                    <i class="fa fa-exchange" style="padding-left: 7px; padding-right: 25px; color: #CDE2FF;"></i> <a href="{{ url_for('specificUserTransaction')}}" style="text-decoration: none;color: #CDE2FF; font-size: 14px">Transactions</a>
                 </div>
               </div>
 
               
                   <div class="audit-trail">
-                      <i class="fa fa-history" style="font-size: 26px; margin-right: 5px;"></i> <a href="{{ url_for('specificUserAuditTrail')}}" style="text-decoration: none; font-size: 14px">Audit trail</a>
+                      <i class="fa fa-history" style="padding-left: 9px; padding-right: 25px;"></i> <a href="{{ url_for('specificUserAuditTrail')}}" style="text-decoration: none; font-size: 14px">Audit trail</a>
                   </div>
                 
             </div>
