--- a/templates/cashoutRequest.html
+++ b/templates/cashoutRequest.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/sidebar.css">
-    <link rel="stylesheet" href="/style/user.css">
-    <link rel="stylesheet" href="/style/mainNav.css">
+    <link rel="stylesheet" href="/static/css/sidebar.css">
+    <link rel="stylesheet" href="/static/css/user.css">
+    <link rel="stylesheet" href="/static/css/mainNav.css">
 
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -131,25 +131,25 @@
                 <div class="links col-md-2 col-sm-2 col-lg-2 ">
                <div class="links-cont" style="width: 100%;"> 
                         <div class="dashboard">
-                        <i class="fa fa-bar-chart" style="font-size: 22px;"></i> <a href="dashboard.html" style="text-decoration: none; color: black; font-size: 14px;">Dashboard</a>
+                        <i class="fa fa-bar-chart fa-sm" style=" padding-left: 20px; padding-right: 28px;"></i> <a href="dashboard.html" style="text-decoration: none; color: black; font-size: 14px;">Dashboard</a>
                     </div>
                     <div class="users-cont" style="background-color: #0C144D; border-radius: 8px;">
 
                     <div class="users">
-                        <i class="fa fa-user" style="font-size: 26px; margin-right: 5px;color: #CDE2FF;"></i> <a href="user.html" style="text-decoration: none; color: #CDE2FF;  font-size: 14px">Users</a>
+                        <i class="fa fa-user fa-sm" style=" margin-right: 5px;color: #CDE2FF; padding-left: 20px; padding-right: 23px;"></i> <a href="user.html" style="text-decoration: none; color: #CDE2FF;  font-size: 14px">Users</a>
                     </div>
                   </div>
                     <div class="audit-trail">
-                        <i class="fa fa-history" style="font-size: 26px; margin-right: 5px;"></i> <a href="auditTrail.html" style="text-decoration: none; color: black; font-size: 14px">Audit trail</a>
+                        <i class="fa fa-history fa-lg" style=" margin-right: 5px; padding-left: 20px; padding-right: 23px;"></i> <a href="auditTrail.html" style="text-decoration: none; color: black; font-size: 14px">Audit trail</a>
                     </div>
                     <div class="accordion accordion-flush" id="accordionFlushExample" style=" margin-top: 15px; background-color: black;">
                       <div class="accordion-item">
                         <h2 class="accordion-header">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="display: flex; background:#F3F7F9;">
-                              <i class="fa fa-money"  style="font-size: 24px;" > </i><span style="margin-left:15px; font-size: 14px; margin-left: 20px; color: #3D3D3D; font-weight: bold;" >Accounting</span> 
+                            <i class="fa fa-money fa-lg" > </i><span style=" font-size: 14px; margin-left: 15px; color: #3D3D3D; font-weight: bold;" >Accounting</span> 
                           </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample" style="margin-left: 10px;">
+                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFlushExample" style="margin-left: 10px;">
                           <div class="accordion-body "><i class="fa fa-money" style="margin-right: 10px;"></i><a href="" style="font-size: 14px; text-decoration: none;">Cashout request</a></div>
                           <div class="accordion-body "><i class="fa fa-money" style="margin-right: 10px;"></i><a href="" style="font-size: 14px; text-decoration: none;">System balance</a></div>
                         </div>
@@ -178,7 +178,7 @@
                     <tbody>
                       <tr onclick="redirectTo('/structure/specUser.html')">
                         <td>
-                              <img src="/images/386873100_237898835581160_4169929024513295217_n-removebg-preview.png" alt="Person's Image" width="50" height="50">
+                              <img src="/static/images/386873100_237898835581160_4169929024513295217_n-removebg-preview.png" alt="Person's Image" width="50" height="50">
                       </td>
                         <td>Frenzy</td>
                         <td >1000</td>
@@ -219,7 +219,7 @@
         </div>
         
 
-        <script src="/functionality/user.js"></script>
+        <script src="/functionalit=]y/user.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
