--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -137,24 +137,24 @@
 
                             <div class="dashb-cont">
                         <div class="dashboard">
-                        <i class="fa fa-bar-chart" style="font-size: 22px; color: #CDE2FF;"></i> <a href="{{ url_for('dashboard')}}" style="text-decoration: none;  font-size: 14px; color: #CDE2FF;">Dashboard</a>
+                        <i class="fa fa-bar-chart fa-sm" style=" color: #CDE2FF; padding-left: 20px; padding-right: 28px;"></i> <a href="{{ url_for('dashboard')}}" style="text-decoration: none;  font-size: 14px; color: #CDE2FF;">Dashboard</a>
                     </div>
                 </div>
                 <div class="users-cont">
                     <div class="users">
-                        <i class="fa fa-user" style="font-size: 26px; margin-right: 5px;"></i> <a href="{{ url_for('users')}}" style="text-decoration: none;   font-size: 14px">Users</a>
+                        <i class="fa fa-user fa-lg" style=" margin-right: 5px; padding-left: 20px; padding-right: 23px;"></i> <a href="{{ url_for('users')}}" style="text-decoration: none;   font-size: 14px">Users</a>
                     </div>
                 </div>
                 <div class="at-cont">
                     <div class="audit-trail">
-                        <i class="fa fa-history" style="font-size: 26px; margin-right: 5px;"></i> <a href="{{ url_for('auditTrail')}}" style="text-decoration: none;  font-size: 14px">Audit trail</a>
+                        <i class="fa fa-history fa-lg" style=" margin-right: 5px; padding-left: 20px; padding-right: 23px;"></i> <a href="{{ url_for('auditTrail')}}" style="text-decoration: none;  font-size: 14px">Audit trail</a>
                     </div>
                 </div>
                 <div class="accordion accordion-flush" id="accordionFlushExample" style=" margin-top: 15px; background-color: black;">
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="display: flex; background:#F3F7F9;">
-                            <i class="fa fa-money"  style="font-size: 24px;" > </i><span style="margin-left:15px; font-size: 14px; margin-left: 20px; color: #3D3D3D; font-weight: bold;" >Accounting</span> 
+                            <i class="fa fa-money fa-lg" > </i><span style=" font-size: 14px; margin-left: 15px; color: #3D3D3D; font-weight: bold;" >Accounting</span> 
                         </button>
                       </h2>
                       <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample" style="margin-left: 10px;">
@@ -185,7 +185,7 @@
                                 <i class="fas fa-user" style="font-size: 50px;"  aria-hidden="true"></i>
                             </div>
                             <div class="number">
-                                <h3>50</h3>
+                                <h3>{{ total_students }}</h3>
                             </div>
                         
                         </div>
