--- a/templates/user.html
+++ b/templates/user.html
@@ -10,7 +10,8 @@
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Document</title>
     </head> 
     <body>
@@ -146,7 +147,7 @@
                       <div class="accordion-item">
                         <h2 class="accordion-header">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="display: flex; background:#F3F7F9;">
-                            <i class="fa fa-money fa-lg" > </i><span style=" font-size: 14px; margin-left: 15px; color: #3D3D3D; font-weight: bold;" >Accounting</span>  
+                            <i class="fa fa-money fa-lg" > </i><span style=" font-size: 14px; margin-left: 15px; color: #3D3D3D;" >Accounting</span>  
                           </button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample" style="margin-left: 10px;">
@@ -197,7 +198,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr onclick="redirectToUserPage()">
+                      <tr data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                         <td>
                               <img src="/static/images/386873100_237898835581160_4169929024513295217_n-removebg-preview.png" alt="Person's Image" width="50" height="50">
                       </td>
@@ -205,6 +206,30 @@
                         <td >try@gmail.com</td>
                         <td>Buyer</td>
                         <td >Active</td>
+
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                          <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <img src="/static/images/edzelle.jpg" alt="Person's Image" width="50" height="50" style="margin-right: 10px;">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">User1</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">
+                                <h3> <i class="fa fa-user fa-lg" style="margin-right: 10px;"></i>edzell </h3>
+                                <h3> <i class="fa fa-envelope fa-sm" style="margin-right: 10px;"></i>edz@gmail.com </h3>
+                                <h3> <i class="fas fa-store fa-sm" style="margin-right: 5px;"></i> Seller </h3>
+                                <h3>Status: Active </h3>
+                              </div>
+                              <div class="modal-footer">
+                                <button  type="button" class="btn btn-danger" >Suspend User</button>
+                                <button onclick="redirectToUserPage()" type="button" class="btn btn-primary">View more</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        
                       
                       </tr>
                       
