--- a/templates/userAuditTrail.html
+++ b/templates/userAuditTrail.html
@@ -131,14 +131,15 @@
             <div class="row">
                 <div class="links col-md-2 col-sm-2 col-lg-2 ">
                   <div class="back-cont" style="margin-top: 70px; width: 100%;">
-                    <i class="fa fa-arrow-left" style="font-size: 16px; margin-right: 0px;"></i> <a href="user.html" style="text-decoration: none;   font-size: 14px">Back</a>
+                    <a class="btn btn-primary" href="{{ url_for('users')}}" role="button"><i class="fa fa-arrow-left"></i></a>
+                    
                 </div>
                <div class="links-cont  ">
                 <div class="user-profile" style="display: flex; justify-content: center;">
                   <img src="/static/images/logo-removebg-preview.png" class="img-thumbnail" alt="..." style="height: 100px; width: 100px; border-radius: 50%;">
                 </div>
                 
-                <div class="user mb-5">
+                <div class="user mb-4">
                
                    <a style="text-decoration: none; color: black; font-size: 14px;">Seller 1</a>
                     </div>
@@ -157,15 +158,54 @@
                           <i class="fa fa-history" style="padding-left: 9px; padding-right: 25px;color: #CDE2FF;"></i> <a href="{{ url_for('specificUserAuditTrail')}}" style="text-decoration: none; color: #CDE2FF;; font-size: 14px">Audit trail</a>
                       </div>
                     </div>
+
+                    <div class="suspend" style=" position:absolute; bottom: 2%; left: 25%; cursor: pointer;">
+                      <span class="text-danger" style="font-size: 14px;"> Suspend user</span>
+                    </div>
                     
 
             </div>
                 
             </div>
             <div class=" the-table col-lg-10 col-md-10 col-sm-10 offset-md-2 offset-sm-2 offsent-lg-2 mt-5" >
-              <div class="container mt-5">
+              <div class="container mt-4">
+             
+                  <div class="row mt-4">
+                      <div class="col-md-4">
+                          <div class="card bg-success">
+                              <div class="card-body d-flex align-items-center">
+                                  <span class="d-flex align-items-center justify-content-center mr-3">
+                                      <i class="fa-solid fa-syringe"></i>
+                                  </span>
+                                  <h5 class="card-title"> Total sales: 5</h5>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-4">
+                          <div class="card bg-danger">
+                              <div class="card-body d-flex align-items-center">
+                                  <span class="d-flex align-items-center justify-content-center mr-3">
+                                      <i class="fa-solid fa-virus-slash"></i>
+                                  </span>
+                                  <h5 class="card-title">Total products: 5</h5>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-4">
+                          <div class="card bg-warning">
+                              <div class="card-body d-flex align-items-center">
+                                  <span  class="d-flex align-items-center justify-content-center mr-3">
+                                      <i class="fa-solid fa-temperature-full"></i>
+                                  </span>
+                                  <h5 class="card-title">Balance: 300</h5>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+           
                 
-                <div class="drop-search mb-2">
+                <div class="drop-search mb-2 mt-3">
                   <div class="date-cont">
                     <input type="date" class="form-control" id="datepicker" placeholder="Select a date">
                   </div>
